# json-kit

./: .gitignore  Makefile  README.md  TODO.md  generate-example-data.py  json-kit.spec  pyproject.toml  requirements.txt
docs/: Makefile  pivot-points.dot
examples/: Makefile  generate-examples.py
examples/atomic-red-team/: T1003.001.dot  T1003.001.json  T1003.001.json_schema.dot  T1003.001.json_schema.json
examples/cisa-kev/: known_exploited_vulnerabilities.dot  known_exploited_vulnerabilities_schema.dot  known_exploited_vulnerabilities_schema.json
examples/mitre-attack-enterprise/: attack-pattern--0a3ead4e-6d47-4ccb-854c-a6a4f9d96b22.dot  attack-pattern--0a3ead4e-6d47-4ccb-854c-a6a4f9d96b22.json-schema.json  attack-pattern.dot  campaign.dot  course-of-action--0bc3ce00-83bc-4a92-a042-79ffbc6af259.dot  course-of-action--0bc3ce00-83bc-4a92-a042-79ffbc6af259.json-schema.json  course-of-action.dot  identity--c78cb6e5-0c4b-4611-8297-d1b8b55e40b5.dot  identity--c78cb6e5-0c4b-4611-8297-d1b8b55e40b5.json-schema.json  identity.dot  intrusion-set--0ea72cd5-ca30-46ba-bc04-378f701c658f.dot  intrusion-set--0ea72cd5-ca30-46ba-bc04-378f701c658f.json-schema.json  intrusion-set.dot  malware--0ba9281c-93fa-4b29-8e9e-7ef918c7b13a.dot  malware--0ba9281c-93fa-4b29-8e9e-7ef918c7b13a.json-schema.json  marking-definition--fa42a846-8d90-4e51-bc29-71d5b4802168.dot  marking-definition--fa42a846-8d90-4e51-bc29-71d5b4802168.json-schema.json  marking-definition.dot  relationship--0a3dbe33-465a-421e-82ca-573d2ca25691.dot  relationship--0a3dbe33-465a-421e-82ca-573d2ca25691.json-schema.json  relationship.dot  tool--03c6e0ea-96d3-4b23-9afb-05055663cf4b.json-schema.json  tool.dot  x-mitre-data-component.dot  x-mitre-data-source.dot  (+10 more)
json_kit/: cli.py  constants.py  converter.py  digraphs.py  files.py  generator.py  json_files.py  json_schema.py  pyinstaller.py
(+102 files in other folders)
