[tool.poetry]
name = "json-kit"
version = "1.0.0"
description = "One man's attempt to conquer JSON once and for all"
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "json_kit"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
genson = "^1.2.2"
networkx = "^3.1"
click = "^8.1.3"
matplotlib = "^3.7.1"
pydot = "^1.4.2"
pyinstaller = "^6.1.0"

[tool.poetry.scripts]
jsonkit = "json_kit.cli:main"
json-kit = "json_kit.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
