[tool.poetry]
name = "json-kit"
version = "2.0.0"
description = "One man's attempt to conquer JSON once and for all"
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "json_kit"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
genson = "^1.2.2"
click = "^8.1.7"
pandas = "^2.1.4"
networkx = "^3.2.1"

[tool.poetry.scripts]
tool = "json_kit.cli:main"
json-kit = "json_kit.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
